force-app/main/default/objects/User/fields/COMM_AccountId__c.field-meta.xml
<CustomField>
    <fullName>COMM_AccountId__c</fullName>
    <formula>Contact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>