force-app/main/default/objects/User/fields/COMM_ContactAirports__c.field-meta.xml
<CustomField>
    <fullName>COMM_ContactAirports__c</fullName>
    <description>Formula to verify list of Airports associated with User&apos;s Contact</description>
    <formula>Contact.COMM_AirportTextList__c</formula>
    <label>Contact Airports</label>
    <type>Text</type>
</CustomField>