force-app/main/default/objects/User/fields/COMM_EffectiveAccountId__c.field-meta.xml
<CustomField>
    <fullName>COMM_EffectiveAccountId__c</fullName>
    <description>Saves the Id of the account the user has chosen to manage</description>
    <label>Effective Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>