force-app/main/default/objects/User/fields/COMM_EmailValidationExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationExpirationDate__c</fullName>
    <description>Field used to validate if URL for email validation has expired</description>
    <label>Email Validation Expiration Date</label>
    <type>DateTime</type>
</CustomField>