force-app/main/default/objects/User/fields/COMM_EmailValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationStatus__c</fullName>
    <description>Status of the email validation process when a user registers</description>
    <label>Email Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Validation</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>