force-app/main/default/objects/User/fields/COMM_EmailValidationURL__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationURL__c</fullName>
    <description>Field to store the url that is send on the email for user to validate their email address</description>
    <label>Email Validation URL</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>