force-app/main/default/objects/User/fields/COMM_IsPasswordReseted__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsPasswordReseted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an informative field to be checked if the user used the option forgot password.</description>
    <label>Is Password Reseted?</label>
    <type>Checkbox</type>
</CustomField>