force-app/main/default/objects/User/fields/COMM_LastPasswordRetrievalTime__c.field-meta.xml
<CustomField>
    <fullName>COMM_LastPasswordRetrievalTime__c</fullName>
    <description>Record the last time a password retrieval request was made.</description>
    <label>Last Password Retrieval Time</label>
    <type>DateTime</type>
</CustomField>