force-app/main/default/objects/User/fields/COMM_LoginType__c.field-meta.xml
<CustomField>
    <fullName>COMM_LoginType__c</fullName>
    <description>Used to identify the type of Login the User uses when logging in from the Community Site</description>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>