force-app/main/default/objects/User/fields/COMM_PasswordRetrievalCount__c.field-meta.xml
<CustomField>
    <fullName>COMM_PasswordRetrievalCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To store the count of password retrieval requests related to the Reset Password Feature in Customer Portal</description>
    <label>Password Retrieval Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>