force-app/main/default/objects/User/fields/COMM_ResetPasswordEmailExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResetPasswordEmailExpirationDate__c</fullName>
    <description>Field to store the date when the users forgot password and change password email link expires.</description>
    <label>Reset Password Email Expiration Date</label>
    <type>DateTime</type>
</CustomField>