force-app/main/default/objects/User/fields/COMM_ResetPasswordEmailUrl__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResetPasswordEmailUrl__c</fullName>
    <description>Field to store the URL that is used in the email sent to users when they use the forgot password or change password on the community site.</description>
    <label>Reset Password Email URL</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>