force-app/main/default/objects/User/listViews/Airport_Admin.listView-meta.xml
<ListView>
    <fullName>Airport_Admin</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Airport Admin</value>
    </filters>
    <label>Airport Admin</label>
    <language>en_US</language>
</ListView>