force-app/main/default/objects/User/listViews/COMM_LV_PartnerUsers.listView-meta.xml
<ListView>
    <fullName>COMM_LV_PartnerUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>Customer Community Plus</value>
    </filters>
    <label>Partner Users</label>
    <language>en_US</language>
</ListView>